chandeliers-lus/tests/compile_fail/ui/tc/when-int.rs
//! Wrong type for a clock.
chandeliers_lus::decl! {
    node bar(b : int; x : int when b) returns ();
    let tel;
}

fn main() {}
